2004-08-23 Juergen Haas <juergenhaas@gmx.net>
	-saving projects:
	is done in a more flexible way:
	adds a similar line with "filename" replaced by "pick_and_place" 
	to project file
FIX ME: reading in a project file is still broken 
	-several bugfixes: 
	 upon pressing mark button in select parts dialog it always updates
	 screen
	
2004-08-23  Tomasz Motylewski <t.motylewski@bfad.de>

	* replaced scale with gerb_transf_t(.scale) - mirroring preparation

2004-08-22  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/Makefile.am: Use libpng-config to find out
	  parameters to use in CFLAGS and LIBS.

tag:SEARCH_SELECT_merged

2004-08-13 11:25 Search9-pre8 Juergen Haas <juergenhaas@gmx.net>
 todo 	saving projects 
	Bugs fixed:
		-if mark is pressed and there is no selection colour of layer
		 button does not change
                -use of libmba's csv.[ch]  
		-automatic screening for delimiters
		-if  dialog is to be destroyed but it does not exist is caught 
		-upon loading a second gerberfile the first user dialog is 
		  destroyed and parsed_PNP_data
		-compiles under GTK1
		-pressing mark actually also activates the new layer
		-loading a gerberfile also activates layer
		-tooltip to entry field now hints at usage of regexp
		-arrow down acts like space
		-colour change back to original colour fixed - new colour is 
                 only allocated upon first draw on an empty layer
		-dropdown list for available layers updates, whenever changes 
                 to layer occur
		-default layer now is actually also the one which is drawn ontoi
                  by default 
 		 (shown was MAXFILES-1, but it was drawn onto 0!)
                -if there was an error loading a pnpfile 
		(e.g. incompatible  csv format) select parts window is destroyed
                  also   parsed_PNP_data is  freed!
		-arrow up reverses arrow down/space 
		-right click now selects and draws the selection on screen